[gd_scene load_steps=2 format=3 uid="uid://c1qwdqjnjycvv"]

[ext_resource type="Script" path="res://super_main.gd" id="1_wlkx1"]

[node name="super_main" type="Node"]
script = ExtResource("1_wlkx1")

[node name="Button" type="Button" parent="."]
offset_right = 114.0
offset_bottom = 45.0
scale = Vector2(3, 3)
text = "http Test"

[node name="Button2" type="Button" parent="."]
offset_left = 574.0
offset_top = 3.0
offset_right = 688.0
offset_bottom = 48.0
scale = Vector2(3, 3)
text = "Bug Squash"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
